force-app/main/default/objects/AcctPlanNIProject__c/AcctPlanNIProject__c.object-meta.xml
<CustomObject>
    <label>Account Plan NI Project</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan NI Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan NI Project</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>