force-app/main/default/objects/AcctPlanNIProject__c/fields/AcctPlanActionPlanID__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanActionPlanID__c</fullName>
    <label>AcctPlanActionPlan</label>
    <referenceTo>AcctPlanActionPlan__c</referenceTo>
    <relationshipLabel>Account Plan NI Project</relationshipLabel>
    <relationshipName>Account_Plan_NI_Project</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>