force-app/main/default/objects/AcctPlanNIProject__c/fields/DealProbability__c.field-meta.xml
<CustomField>
    <fullName>DealProbability__c</fullName>
    <description>Deal Probability(%)</description>
    <inlineHelpText>Deal Probability(%)</inlineHelpText>
    <label>DealProbability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>