force-app/main/default/objects/AcctPlanNIProject__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Strategic Products or Services that are prioritized for the customer.  (Please note that this field will be displayed in Executive Summary)
ข้อมูล Strategy จะถูกนำไปแสดงใน Executive Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Strategic Products or Services that are prioritized for the customer.  (Please note that this field will be displayed in Executive Summary)
ข้อมูล Strategy จะถูกนำไปแสดงใน Executive Summary</inlineHelpText>
    <label>Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>