force-app/main/default/objects/AcctPlanNIProject__c/fields/ExpectedIncremental__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncremental__c</fullName>
    <description>Expected Incremental Vol. (THB)/year</description>
    <inlineHelpText>Expected Incremental Vol. (THB)/year</inlineHelpText>
    <label>ExpectedIncremental</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>