force-app/main/default/objects/AcctPlanNIProject__c/fields/ExpectedIncrementalFeePerYear1Year__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncrementalFeePerYear1Year__c</fullName>
    <description>ข้อมูล Expected Fee Income per Year (first year) จะถูกนำไปแสดงใน Executive Summary</description>
    <inlineHelpText>ข้อมูล Expected Fee Income per Year (first year) จะถูกนำไปแสดงใน Executive Summary</inlineHelpText>
    <label>ExpectedIncrementalFeePerYear1Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>