force-app/main/default/objects/AcctPlanNIProject__c/fields/ExpectedIncrementalFeePerYear2Year__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncrementalFeePerYear2Year__c</fullName>
    <description>Expected Incremental NI/Fee - Full Deal</description>
    <inlineHelpText>Expected Incremental NI/Fee - Full Deal</inlineHelpText>
    <label>ExpectedIncrementalFeePerYear2Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>