force-app/main/default/objects/AcctPlanNIProject__c/fields/ExpectedIncrementalNIPerYear1Year__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncrementalNIPerYear1Year__c</fullName>
    <description>Expected incremental NI/Fee per year  (first year). (Please note that this field will be displayed in Executive Summary)
ข้อมูล Expected incremental NI/Fee per year  (first year) จะถูกนำไปแสดงใน Executive Summary</description>
    <inlineHelpText>Expected incremental NI/Fee per year  (first year). (Please note that this field will be displayed in Executive Summary)
ข้อมูล Expected incremental NI/Fee per year  (first year) จะถูกนำไปแสดงใน Executive Summary</inlineHelpText>
    <label>ExpectedIncrementalNIPerYear1Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>