force-app/main/default/objects/AcctPlanNIProject__c/fields/ExpectedNimRate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedNimRate__c</fullName>
    <description>Expected NIM/Fee rate (%)</description>
    <inlineHelpText>Expected NIM/Fee rate (%)</inlineHelpText>
    <label>ExpectedNimRate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>