force-app/main/default/objects/AcctPlanNIProject__c/fields/FeeRecuringType__c.field-meta.xml
<CustomField>
    <fullName>FeeRecuringType__c</fullName>
    <description>NI/Fee-Recurring or One-off</description>
    <inlineHelpText>NI/Fee-Recurring or One-off</inlineHelpText>
    <label>FeeRecuringType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>One-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>