force-app/main/default/objects/AcctPlanNIProject__c/fields/GroupCount__c.field-meta.xml
<CustomField>
    <fullName>GroupCount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GroupCount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>