force-app/main/default/objects/AcctPlanNIProject__c/fields/NIStartYear__c.field-meta.xml
<CustomField>
    <fullName>NIStartYear__c</fullName>
    <description>NI/Fee -Start year</description>
    <inlineHelpText>NI/Fee -Start year</inlineHelpText>
    <label>NIStartYear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>