force-app/main/default/objects/AcctPlanNIProject__c/fields/NonStandardInitiative__c.field-meta.xml
<CustomField>
    <fullName>NonStandardInitiative__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NonStandardInitiative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>