force-app/main/default/objects/AcctPlanNIProject__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Details</description>
    <inlineHelpText>Opportunity Details</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Plan NI Project</relationshipLabel>
    <relationshipName>Account_Plan_NI_Project</relationshipName>
    <type>Lookup</type>
</CustomField>