force-app/main/default/objects/AcctPlanNIProject__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Account Plan NI Project</relationshipLabel>
    <relationshipName>Account_Plan_NI_Project</relationshipName>
    <type>Lookup</type>
</CustomField>