force-app/main/default/objects/AcctPlanNIProject__c/fields/PropsProductOrServices__c.field-meta.xml
<CustomField>
    <fullName>PropsProductOrServices__c</fullName>
    <description>Proposed TMB Products or Services  (Please note that this field will be displayed in Executive Summary)
ข้อมูล Proposed products or services จะถูกนำไปแสดงใน Executive Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Proposed TMB Products or Services  (Please note that this field will be displayed in Executive Summary)
ข้อมูล Proposed products or services จะถูกนำไปแสดงใน Executive Summary</inlineHelpText>
    <label>PropsProductOrServices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>