force-app/main/default/objects/AcctPlanNIProject__c/fields/StandardInitiative__c.field-meta.xml
<CustomField>
    <fullName>StandardInitiative__c</fullName>
    <label>StandardInitiative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boost utilization</fullName>
            </value>
            <value>
                <fullName>Increase limit/Realign limit</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Customizied deal</fullName>
            </value>
            <value>
                <fullName>Standard Deal</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Thai Baht Clearing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>