force-app/main/default/objects/AcctPlanNIProject__c/fields/TypeOfFee__c.field-meta.xml
<CustomField>
    <fullName>TypeOfFee__c</fullName>
    <description>Type of NI/Fee</description>
    <inlineHelpText>Type of NI/Fee</inlineHelpText>
    <label>TypeOfFee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TF Fee</fullName>
            </value>
            <value>
                <fullName>FX fee</fullName>
            </value>
            <value>
                <fullName>L/G fee</fullName>
            </value>
            <value>
                <fullName>Cash fee</fullName>
            </value>
            <value>
                <fullName>Credit fee</fullName>
            </value>
            <value>
                <fullName>BA fee</fullName>
            </value>
            <value>
                <fullName>Derivative fee</fullName>
            </value>
            <value>
                <fullName>IB Fee</fullName>
            </value>
            <value>
                <fullName>AS Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>