force-app/main/default/objects/AcctPlanNIProject__c/fields/TypeOfNI__c.field-meta.xml
<CustomField>
    <fullName>TypeOfNI__c</fullName>
    <description>Type of NI/Fee</description>
    <inlineHelpText>Type of NI/Fee</inlineHelpText>
    <label>TypeOfNI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NIIc</fullName>
            </value>
            <value>
                <fullName>NIId</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>